changed examples to match design

--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -72,6 +72,9 @@
                     "title": "Origination",
                     "link": "#"
                 }, {
+                    "title": "Fulfilment",
+                    "link": "#"
+                }, {
                     "title": "Servicing",
                     "link": "#"
                 }],
@@ -87,22 +90,22 @@
                         "link": null,
                         "buttons": [
                             {
-                                "title": "Content management",
+                                "title": "Content",
                                 "link": "#",
                                 "icon": "ph-pencil"
                             },
                             {
-                                "title": "Correspondence management",
+                                "title": "Correspondence",
                                 "link": null,
                                 "icon": "mat-markunread_mailbox"
                             },
                             {
-                                "title": "Document management",
+                                "title": "Document",
                                 "link": null,
                                 "icon": "ph-archive"
                             },
                             {
-                                "title": "Label management",
+                                "title": "Label",
                                 "link": "#",
                                 "icon": "ph-tag"
                             }
@@ -113,7 +116,7 @@
                         "link": null,
                         "buttons": [
                             {
-                                "title": "Orientation management",
+                                "title": "Orientation",
                                 "link": "manage-mortgages/our-business/domains/orientations/orientation-management/index.html",
                                 "icon": "ph-hand-heart"
                             }
@@ -124,23 +127,23 @@
                         "link": null,
                         "buttons": [
                             {
-                                "title": "Credit checks management",
+                                "title": "Credit checks",
                                 "link": null,
                                 "icon": "ph-shield-check"
                             },
                             {
-                                "title": "Loan application management",
+                                "title": "Loan application",
                                 "link": "#",
                                 "icon": "assets/icons/loan.svg"
                             }
                         ]
                     },
                     {
-                        "title": "Relationships",
+                        "title": "Relations",
                         "link": null,
                         "buttons": [
                             {
-                                "title": "Consumer relationship management",
+                                "title": "Consumer relations",
                                 "link": "manage-mortgages/our-business/domains/relationships/consumer-relationship-management/index.html",
                                 "icon": "ph-user-focus"
                             }
