Add FA + Material Symbols

--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -56,7 +56,7 @@
                 }, {
                     "title": "Email",
                     "link": null,
-                    "icon": "fa-mailbox"
+                    "icon": "fa-envelope"
                 }],
                 "title": "Channels",
                 "link": "manage-mortgages/our-business/channels/index.html"
