title is optional

--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -58,7 +58,7 @@
                     "link": null,
                     "icon": "fa-envelope"
                 }],
-                "title": "Channels",
+                "title": "",
                 "link": "manage-mortgages/our-business/channels/index.html"
             },
             {
@@ -86,7 +86,7 @@
                 "buttonType": "default",
                 "groups": [
                     {
-                        "title": "Engagements",
+                        "title": "",
                         "link": null,
                         "buttons": [
                             {
