--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -92,7 +92,7 @@
                             {
                                 "title": "Content",
                                 "link": "#",
-                                "icon": "ph-pencil"
+                                "icon": "mat-policy"
                             },
                             {
                                 "title": "Correspondence",
