--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
             <li><a href="./business-reference-architecture/index.html">business reference architecture</a></li>
             <li><a href="./model-viewer/index.html">model viewer</a></li>
             <li><a href="./command-viewer/index.html">command viewer</a></li>
+            <li><a href="./event-viewer/index.html">event viewer</a></li>
+            <li><a href="./query-viewer/index.html">query viewer</a></li>
+            <li><a href="./task-viewer/index.html">task viewer</a></li>
           </ul>
         </div>
   </main>
