--- a/src/task-viewer/index.html
+++ b/src/task-viewer/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Command viewer</title>
+  <title>Task viewer</title>
   <link rel="stylesheet" href="../assets/style/page/style.css">
 </head>
 
@@ -12,12 +12,12 @@
     <div class="content">
       <div class="header-container h1">
         <div class="header">
-          <h1>Command viewer</h1>
+          <h1>Task viewer</h1>
         </div>
         <div class="container">
-          <command-viewer model-json='
+          <task-viewer model-json='
           {
-            "name": "Test command",
+            "name": "Test task",
             "description": "........",
             "parameters": {
               "required": [
@@ -99,7 +99,7 @@
               }
             }
           }
-          '></command-viewer>
+          '></task-viewer>
         </div>
       </div>
   </main>
