--- a/src/command-viewer/index.html
+++ b/src/command-viewer/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Command viewer</title>
-  <link rel="stylesheet" href="../assets/style/page/style.css">
+  <link rel="stylesheet" href="../../assets/style/page/style.css">
 </head>
 
 <body>
