--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,15 @@
             <li><a href="./business-model-canvas/index.html">business model canvas</a></li>
             <li><a href="./business-reference-architecture/index.html">business reference architecture</a></li>
             <li><a href="./model-viewer/index.html">model viewer</a></li>
-            <li><a href="./command-viewer/index.html">command viewer</a></li>
-            <li><a href="./event-viewer/index.html">event viewer</a></li>
-            <li><a href="./query-viewer/index.html">query viewer</a></li>
-            <li><a href="./task-viewer/index.html">task viewer</a></li>
+            <li>
+              <span>Use case viewer:</span>
+              <ul>
+                <li><a href="./command-viewer/index.html">command viewer</a></li>
+                <li><a href="./event-viewer/index.html">event viewer</a></li>
+                <li><a href="./query-viewer/index.html">query viewer</a></li>
+                <li><a href="./task-viewer/index.html">task viewer</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
   </main>
