--- a/src/task-viewer/index.html
+++ b/src/task-viewer/index.html
@@ -19,7 +19,7 @@
           {
             "name": "Test task",
             "description": "........",
-            "parameters": {
+            "context": {
               "required": [
                 "depot",
                 "colleteral",
