--- a/src/model-viewer/index.html
+++ b/src/model-viewer/index.html
@@ -46,6 +46,9 @@
                 "description": "Object type is used the distinguish between different types of trainsets.",
                 "type": "string"
               },
+              "is_train": {
+                "type": "boolean"
+              },
               "trainset_id": {
                 "type": "integer",
                 "minimum": 0,
