--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -16,192 +16,7 @@
           <h2 id="h2" tabindex="-1">Business reference architecture <a class="header-anchor" href="#h2">¶</a></h2>
         </div>
         <div class="container">
-            <business-reference-architecture id="business-ref-arch" model-json='[
-            {
-                "arrow": "down",
-                "buttonType": "brand",
-                "buttons": [{
-                    "title": "Consumer",
-                    "link": null,
-                    "icon": "ph-user"
-                }, {
-                    "title": "Employee",
-                    "link": "#",
-                    "icon": "ph-users-three"
-                }, {
-                    "title": "Lender",
-                    "link": null,
-                    "icon": "ph-hand-coins"
-                }, {
-                    "title": "Notary",
-                    "link": null,
-                    "icon": "ph-signature"
-                }, {
-                    "title": "Advisor",
-                    "link": "#",
-                    "icon": "ph-suitcase"
-                }],
-                "title": "End users"
-            },
-            {
-                "arrow": "down",
-                "buttons": [{
-                    "title": "Consumer portal",
-                    "link": "#",
-                    "icon": "ph-storefront"
-                }, {
-                    "title": "Operations portal",
-                    "link": "#",
-                    "icon": "ph-factory"
-                }, {
-                    "title": "Email",
-                    "link": null,
-                    "icon": "fa-envelope"
-                }],
-                "title": "",
-                "link": "manage-mortgages/our-business/channels/index.html"
-            },
-            {
-                "buttonType": "stream",
-                "sectionType": "streams",
-                "buttons": [{
-                    "title": "Orientation",
-                    "link": "#",
-                    "icon": "ph-magnifying-glass"
-                }, {
-                    "title": "Origination",
-                    "link": "#"
-                }, {
-                    "title": "Fulfilment",
-                    "link": "#"
-                }, {
-                    "title": "Servicing",
-                    "link": "#"
-                }],
-                "title": "Value streams",
-                "link": "manage-mortgages/our-business/value-streams/index.html"
-            },
-            {
-                "arrow": "up",
-                "buttonType": "default",
-                "groups": [
-                    {
-                        "title": "",
-                        "link": null,
-                        "buttons": [
-                            {
-                                "title": "Content",
-                                "link": "#",
-                                "icon": "mat-policy"
-                            },
-                            {
-                                "title": "Correspondence",
-                                "link": null,
-                                "icon": "mat-markunread_mailbox"
-                            },
-                            {
-                                "title": "Document",
-                                "link": null,
-                                "icon": "ph-archive"
-                            },
-                            {
-                                "title": "Label",
-                                "link": "#",
-                                "icon": "ph-tag"
-                            }
-                        ]
-                    },
-                    {
-                        "title": "Orientations",
-                        "link": null,
-                        "buttons": [
-                            {
-                                "title": "Orientation",
-                                "link": "manage-mortgages/our-business/domains/orientations/orientation-management/index.html",
-                                "icon": "ph-hand-heart"
-                            }
-                        ]
-                    },
-                    {
-                        "title": "Originations",
-                        "link": null,
-                        "buttons": [
-                            {
-                                "title": "Credit checks",
-                                "link": null,
-                                "icon": "ph-shield-check"
-                            },
-                            {
-                                "title": "Loan application",
-                                "link": "#",
-                                "icon": "assets/icons/loan.svg"
-                            }
-                        ]
-                    },
-                    {
-                        "title": "Relations",
-                        "link": null,
-                        "buttons": [
-                            {
-                                "title": "Consumer relations",
-                                "link": "manage-mortgages/our-business/domains/relationships/consumer-relationship-management/index.html",
-                                "icon": "ph-user-focus"
-                            }
-                        ]
-                    }
-                ],
-                "title": "Domains",
-                "link": "manage-mortgages/our-business/domains/index.html"
-            },
-            {
-                "sectionType": "side",
-                "buttonType": "default",
-                "buttons": [
-                    {
-                        "title": "Cost reductions through growth",
-                        "link": "manage-mortgages/our-business/principles/cost-reductions-through-growth/index.html",
-                        "icon": "ph-shield-check"
-                    },
-                    {
-                        "title": "Direct processing",
-                        "link": "manage-mortgages/our-business/principles/direct-processing/index.html",
-                        "icon": "ph-shield-check"
-                    },
-                    {
-                        "title": "European mortgages platform",
-                        "link": "manage-mortgages/our-business/principles/european-mortgages-platform/index.html",
-                        "icon": "ph-shield-check"
-                    },
-                    {
-                        "title": "Focus on residential mortgages",
-                        "link": "manage-mortgages/our-business/principles/focus-on-residential-mortgages/index.html",
-                        "icon": "ph-shield-check"
-                    },
-                    {
-                        "title": "Generic and flexible",
-                        "link": "manage-mortgages/our-business/principles/generic-and-flexible/index.html",
-                        "icon": "ph-shield-check"
-                    },
-                    {
-                        "title": "High levels of compliance and assurance",
-                        "link": "manage-mortgages/our-business/principles/high-levels-of-compliance-and-assurance/index.html",
-                        "icon": "ph-shield-check"
-                    },
-                    {
-                        "title": "Impartiality",
-                        "link": "manage-mortgages/our-business/principles/impartiality/index.html",
-                        "icon": "ph-shield-check"
-                    },
-                    {
-                        "title": "Sustainability",
-                        "link": "manage-mortgages/our-business/principles/sustainability/index.html",
-                        "icon": "ph-shield-check"
-                    }
-                ],
-                "title": "Principles",
-                "link": null
-            }
-        ]'></business-reference-architecture>
+            <business-reference-architecture id="business-ref-arch" model-json='[{"arrow":"down","buttonType":"brand","buttons":[{"title":"Advisor","link":"end-users/advisor/index.html","icon":"mat-business_center"},{"title":"Appraiser","link":"end-users/appraiser/index.html","icon":"mat-in_home_mode"},{"title":"Consumer","link":"end-users/consumer/index.html","icon":"mat-person"},{"title":"Lender","link":"end-users/lender/index.html","icon":"mat-account_balance"},{"title":"Notary","link":"end-users/notary/index.html","icon":"mat-signature"}],"title":"End users","link":null},{"arrow":"down","buttons":[{"title":"Api","link":"channels/api/index.html","icon":"mat-webhook"},{"title":"Consumer app","link":"channels/consumer-app/index.html","icon":"mat-smartphone"},{"title":"Consumer portal","link":"channels/consumer-portal/index.html","icon":"mat-storefront"},{"title":"Email","link":"channels/email/index.html","icon":"mat-alternate_email"},{"title":"Fax","link":"channels/fax/index.html","icon":"mat-fax"},{"title":"Operations portal","link":"channels/operations-portal/index.html","icon":"mat-factory"},{"title":"Postal","link":"channels/postal/index.html","icon":"mat-local_post_office"}],"title":"Channels","link":null},{"buttonType":"stream","sectionType":"streams","buttons":[{"title":"Orientation","link":"value-streams/orientation/index.html"},{"title":"Origination","link":"value-streams/origination/index.html"},{"title":"Fulfillment","link":"value-streams/fulfillment/index.html"},{"title":"Servicing","link":"value-streams/servicing/index.html"}],"title":"Value streams","link":null},{"arrow":"up","buttonType":"default","groups":[{"title":"Asset domain","link":"domains/asset-domain/index.html","buttons":[{"title":"Colleteral service","link":"domains/asset-domain/colleteral-service/index.html","icon":"mat-price_check"},{"title":"Policy service","link":"domains/asset-domain/policy-service/index.html","icon":"mat-policy"},{"title":"Security service","link":"domains/asset-domain/security-service/index.html","icon":"mat-shield_locked"}]},{"title":"Engagement domain","link":"domains/engagement-domain/index.html","buttons":[{"title":"Content service","link":"domains/engagement-domain/content-service/index.html","icon":"mat-edit_document"},{"title":"Correspondence service","link":"domains/engagement-domain/correspondence-service/index.html","icon":"mat-send"},{"title":"Document service","link":"domains/engagement-domain/document-service/index.html","icon":"mat-file_save"},{"title":"Label service","link":"domains/engagement-domain/label-service/index.html","icon":"mat-brand_family"},{"title":"Notification service","link":"domains/engagement-domain/notification-service/index.html","icon":"mat-notifications_active"}]},{"title":"Loan domain","link":"domains/loan-domain/index.html","buttons":[{"title":"Compensation service","link":"domains/loan-domain/compensation-service/index.html","icon":"mat-medical_services"},{"title":"Contract service","link":"domains/loan-domain/contract-service/index.html","icon":"mat-contract"},{"title":"Depot service","link":"domains/loan-domain/depot-service/index.html","icon":"mat-construction"},{"title":"Installment service","link":"domains/loan-domain/installment-service/index.html","icon":"mat-event_repeat"},{"title":"Loan service","link":"domains/loan-domain/loan-service/index.html","icon":"mat-real_estate_agent"},{"title":"Loan to value service","link":"domains/loan-domain/loan-to-value-service/index.html","icon":"mat-percent"}]},{"title":"Money domain","link":"domains/money-domain/index.html","buttons":[{"title":"Accounting service","link":"domains/money-domain/accounting-service/index.html","icon":"mat-calculate"},{"title":"Arrear service","link":"domains/money-domain/arrear-service/index.html","icon":"mat-bomb"},{"title":"Collection service","link":"domains/money-domain/collection-service/index.html","icon":"mat-toll"},{"title":"Funding service","link":"domains/money-domain/funding-service/index.html","icon":"mat-savings"},{"title":"Payment service","link":"domains/money-domain/payment-service/index.html","icon":"mat-send_money"}]},{"title":"Origination domain","link":"domains/origination-domain/index.html","buttons":[{"title":"Credit check service","link":"domains/origination-domain/credit-check-service/index.html","icon":"mat-credit_score"},{"title":"Income determination service","link":"domains/origination-domain/income-determination-service/index.html","icon":"mat-universal_currency"},{"title":"Loan application service","link":"domains/origination-domain/loan-application-service/index.html","icon":"mat-approval_delegation"},{"title":"Loan orientation service","link":"domains/origination-domain/loan-orientation-service/index.html","icon":"mat-volunteer_activism"}]},{"title":"Product domain","link":"domains/product-domain/index.html","buttons":[{"title":"Configuration service","link":"domains/product-domain/configuration-service/index.html","icon":"mat-manufacturing"},{"title":"Interest service","link":"domains/product-domain/interest-service/index.html","icon":"mat-heap_snapshot_large"},{"title":"Organisation service","link":"domains/product-domain/organisation-service/index.html","icon":"mat-help"}]},{"title":"Relation domain","link":"domains/relation-domain/index.html","buttons":[{"title":"Account service","link":"domains/relation-domain/account-service/index.html","icon":"mat-admin_panel_settings"},{"title":"Consumer service","link":"domains/relation-domain/consumer-service/index.html","icon":"mat-contacts"},{"title":"Third party service","link":"domains/relation-domain/third-party-service/index.html","icon":"mat-holiday_village"}]},{"title":"Reporting & analytics domain","link":"domains/reporting-&-analytics-domain/index.html","buttons":[{"title":"Dashboarding service","link":"domains/reporting-&-analytics-domain/dashboarding-service/index.html","icon":"mat-speed"},{"title":"Self service analytics service","link":"domains/reporting-&-analytics-domain/self-service-analytics-service/index.html","icon":"mat-analytics"}]}],"title":"Business services","link":null},{"sectionType":"side","buttonType":"default","buttons":[{"title":"Cost reductions through growth","link":"principles/cost-reductions-through-growth/index.html","icon":"mat-verified_user"},{"title":"Direct processing","link":"principles/direct-processing/index.html","icon":"mat-verified_user"},{"title":"European mortgages platform","link":"principles/european-mortgages-platform/index.html","icon":"mat-verified_user"},{"title":"Focus on residential mortgages","link":"principles/focus-on-residential-mortgages/index.html","icon":"mat-verified_user"},{"title":"Generic and flexible","link":"principles/generic-and-flexible/index.html","icon":"mat-verified_user"},{"title":"High levels of compliance and assurance","link":"principles/high-levels-of-compliance-and-assurance/index.html","icon":"mat-verified_user"},{"title":"Impartiality","link":"principles/impartiality/index.html","icon":"mat-verified_user"},{"title":"Sustainability","link":"principles/sustainability/index.html","icon":"mat-verified_user"}],"title":"Principles","link":null}]'></business-reference-architecture>
         </div>
       </div>
   </main>
