--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="container">
           <ul>
-
+            <li><a href="./archimate-viewer/index.html">archimate viewer</a></li>
             <li><a href="./bpmn-viewer/index.html">BPMN viewer</a></li>
             <li><a href="./business-model-canvas/index.html">business model canvas</a></li>
             <li><a href="./business-reference-architecture/index.html">business reference architecture</a></li>
