--- a/src/business-model-canvas/index.html
+++ b/src/business-model-canvas/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Business model canvas</title>
     <link rel="stylesheet" href="../assets/style/page/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
