--- a/src/bpmn-viewer/index.html
+++ b/src/bpmn-viewer/index.html
@@ -19,6 +19,11 @@
         <div class="header">
           <h1>BPMN Viewer</h1>
         </div>
+        <div class="zoom-controls">
+          <button id="zoom-out">➖</button>
+          <button id="reset-zoom">🔍</button>
+          <button id="zoom-in">➕</button>
+        </div>
         <div class="container" id="container">
         </div>
       </div>
@@ -121,6 +126,15 @@
         </bpmn:definitions>
         `);
         document.getElementById('container').appendChild(element);
+        document.getElementById('zoom-in').addEventListener('click', () => {
+          element.zoomIn();
+        })
+        document.getElementById('zoom-out').addEventListener('click', () => {
+          element.zoomOut();
+        })
+        document.getElementById('reset-zoom').addEventListener('click', () => {
+          element.zoomReset();
+        })
     })
   </script>
 </body>
