--- a/src/bpmn-viewer/index.html
+++ b/src/bpmn-viewer/index.html
@@ -131,6 +131,7 @@
           </bpmndi:BPMNDiagram>
         </bpmn:definitions>
         `);
+        element.setAttribute('show-process', 'Activity_0d5g08j');
         document.getElementById('container').appendChild(element);
         document.getElementById('zoom-in').addEventListener('click', () => {
           element.zoomIn();
