added multi line description support

--- a/src/model-viewer/index.html
+++ b/src/model-viewer/index.html
@@ -27,6 +27,7 @@
     setTimeout(() => {
       viewer.model = {
     "title": "loan application",
+    "description": "test\ntest\ntest\ntest\n",
     "required": [
         "advisory_office_id",
         "applicants",
@@ -50,6 +51,10 @@
                         "city"
                     ],
                     "properties": {
+                        "full": {
+                            "type": "string",
+                            "example": "Langestraat 9-a\n1000AA Het dorp",
+                        },
                         "country": {
                             "type": "string",
                             "pattern": "^[a-zA-Z]{2}$",
