added markdown support added titelize support for title

--- a/src/command-viewer/index.html
+++ b/src/command-viewer/index.html
@@ -31,9 +31,11 @@
                     "orginal_deposit",
                     "remaining_deposit"
                   ],
+                  "description": "A person is an entity that the law recognizes as having rights and obligations. A person can be either a natural person or a legal person. Persons are official parties envolved in a contract (they sign the contract) apposed to third parties who play a role in a contract (do not sign the contract).\n\nFor loan contracts the following persons are envolved:\n\n- consumers\n- guarantors\n- lenders",
                   "properties": {
                     "type_of_contruction": {
                       "type": "string",
+                      "description": "A person is an entity that the law recognizes as having rights and obligations. A person can be either a natural person or a legal person. Persons are official parties envolved in a contract (they sign the contract) apposed to third parties who play a role in a contract (do not sign the contract).\n\nFor loan contracts the following persons are envolved:\n\n- consumers\n- guarantors\n- lenders",
                       "enum": [
                         "NEW_CONSTRUCTION",
                         "RENOVATION"
