added ul for array property values

--- a/src/command-viewer/index.html
+++ b/src/command-viewer/index.html
@@ -42,7 +42,8 @@
                       ]
                     },
                     "orginal_deposit": {
-                      "type": "integer"
+                      "type": "integer",
+                      "example": "test"
                     },
                     "remaining_deposit": {
                       "type": "integer"
