added src attribute to bpmn viewer

--- a/src/bpmn-viewer/index.html
+++ b/src/bpmn-viewer/index.html
@@ -25,129 +25,11 @@
           <button id="zoom-in">➕</button>
         </div>
         <div class="container" id="container">
+          <bpmn-viewer src="./test-data/custom-linksq.bpmn"></bpmn-viewer>
+        </div>
         </div>
       </div>
   </main>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const element = document.createElement('bpmn-viewer');
-      element.setAttribute('data-xml', `
-        <?xml version="1.0" encoding="UTF-8"?>
-        <bpmn:definitions xmlns:bpmn="http://www.omg.org/spec/BPMN/20100524/MODEL" xmlns:bpmndi="http://www.omg.org/spec/BPMN/20100524/DI" xmlns:dc="http://www.omg.org/spec/DD/20100524/DC" xmlns:di="http://www.omg.org/spec/DD/20100524/DI" xmlns:modeler="http://camunda.org/schema/modeler/1.0" id="Definitions_0370cz7" targetNamespace="http://bpmn.io/schema/bpmn" exporter="Camunda Modeler" exporterVersion="5.24.0" modeler:executionPlatform="Camunda Platform" modeler:executionPlatformVersion="7.21.0" xmlns:bizdevops="http://bizdevops">
-          <bpmn:process id="Process_1jwc27w" isExecutable="true">
-            <bpmn:startEvent id="StartEvent_1">
-              <bpmn:outgoing>Flow_1mwlv9a</bpmn:outgoing>
-            </bpmn:startEvent>
-            <bpmn:subProcess id="Activity_0d5g08j" name="Test">
-              <bpmn:incoming>Flow_1mwlv9a</bpmn:incoming>
-              <bpmn:outgoing>Flow_0nkblsz</bpmn:outgoing>
-              <bpmn:extensionElements>
-                <bizdevops:links>
-                  <bizdevops:link name="Test" value="www.test.com" />
-                  <bizdevops:link value="www.test2.com" />
-                </bizdevops:links>
-              </bpmn:extensionElements>
-              <bpmn:startEvent id="Event_0akz001">
-                <bpmn:outgoing>Flow_1175eqo</bpmn:outgoing>
-              </bpmn:startEvent>
-              <bpmn:subProcess id="Activity_0m8usba">
-                <bpmn:incoming>Flow_1175eqo</bpmn:incoming>
-                <bpmn:outgoing>Flow_1l4qh43</bpmn:outgoing>
-                <bpmn:startEvent id="Event_0gov56k">
-                  <bpmn:outgoing>Flow_1yhy2v8</bpmn:outgoing>
-                </bpmn:startEvent>
-                <bpmn:endEvent id="Event_08qgf12">
-                  <bpmn:incoming>Flow_1yhy2v8</bpmn:incoming>
-                </bpmn:endEvent>
-                <bpmn:sequenceFlow id="Flow_1yhy2v8" sourceRef="Event_0gov56k" targetRef="Event_08qgf12" />
-              </bpmn:subProcess>
-              <bpmn:sequenceFlow id="Flow_1175eqo" sourceRef="Event_0akz001" targetRef="Activity_0m8usba" />
-              <bpmn:endEvent id="Event_19pokke">
-                <bpmn:incoming>Flow_1l4qh43</bpmn:incoming>
-              </bpmn:endEvent>
-              <bpmn:sequenceFlow id="Flow_1l4qh43" sourceRef="Activity_0m8usba" targetRef="Event_19pokke" />
-            </bpmn:subProcess>
-            <bpmn:sequenceFlow id="Flow_1mwlv9a" sourceRef="StartEvent_1" targetRef="Activity_0d5g08j" />
-            <bpmn:endEvent id="Event_1rf4z3k">
-              <bpmn:incoming>Flow_0nkblsz</bpmn:incoming>
-            </bpmn:endEvent>
-            <bpmn:sequenceFlow id="Flow_0nkblsz" sourceRef="Activity_0d5g08j" targetRef="Event_1rf4z3k" />
-          </bpmn:process>
-          <bpmndi:BPMNDiagram id="BPMNDiagram_1">
-            <bpmndi:BPMNPlane id="BPMNPlane_1" bpmnElement="Process_1jwc27w">
-              <bpmndi:BPMNShape id="_BPMNShape_StartEvent_2" bpmnElement="StartEvent_1">
-                <dc:Bounds x="179" y="159" width="36" height="36" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNShape id="Event_1rf4z3k_di" bpmnElement="Event_1rf4z3k">
-                <dc:Bounds x="432" y="159" width="36" height="36" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNShape id="Activity_0d5g08j_di" bpmnElement="Activity_0d5g08j">
-                <dc:Bounds x="270" y="137" width="100" height="80" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNEdge id="Flow_1mwlv9a_di" bpmnElement="Flow_1mwlv9a">
-                <di:waypoint x="215" y="177" />
-                <di:waypoint x="270" y="177" />
-              </bpmndi:BPMNEdge>
-              <bpmndi:BPMNEdge id="Flow_0nkblsz_di" bpmnElement="Flow_0nkblsz">
-                <di:waypoint x="370" y="177" />
-                <di:waypoint x="432" y="177" />
-              </bpmndi:BPMNEdge>
-            </bpmndi:BPMNPlane>
-          </bpmndi:BPMNDiagram>
-          <bpmndi:BPMNDiagram id="BPMNDiagram_1kz6jwh">
-            <bpmndi:BPMNPlane id="BPMNPlane_1vpf4jh" bpmnElement="Activity_0d5g08j">
-              <bpmndi:BPMNShape id="Event_0akz001_di" bpmnElement="Event_0akz001">
-                <dc:Bounds x="192" y="112" width="36" height="36" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNShape id="Event_19pokke_di" bpmnElement="Event_19pokke">
-                <dc:Bounds x="412" y="112" width="36" height="36" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNShape id="Activity_0m8usba_di" bpmnElement="Activity_0m8usba">
-                <dc:Bounds x="270" y="90" width="100" height="80" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNEdge id="Flow_1175eqo_di" bpmnElement="Flow_1175eqo">
-                <di:waypoint x="228" y="130" />
-                <di:waypoint x="270" y="130" />
-              </bpmndi:BPMNEdge>
-              <bpmndi:BPMNEdge id="Flow_1l4qh43_di" bpmnElement="Flow_1l4qh43">
-                <di:waypoint x="370" y="130" />
-                <di:waypoint x="412" y="130" />
-              </bpmndi:BPMNEdge>
-            </bpmndi:BPMNPlane>
-          </bpmndi:BPMNDiagram>
-          <bpmndi:BPMNDiagram id="BPMNDiagram_1e2wyl0">
-            <bpmndi:BPMNPlane id="BPMNPlane_0xy3952" bpmnElement="Activity_0m8usba">
-              <bpmndi:BPMNShape id="Event_0gov56k_di" bpmnElement="Event_0gov56k">
-                <dc:Bounds x="152" y="82" width="36" height="36" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNShape id="Event_08qgf12_di" bpmnElement="Event_08qgf12">
-                <dc:Bounds x="242" y="82" width="36" height="36" />
-              </bpmndi:BPMNShape>
-              <bpmndi:BPMNEdge id="Flow_1yhy2v8_di" bpmnElement="Flow_1yhy2v8">
-                <di:waypoint x="188" y="100" />
-                <di:waypoint x="242" y="100" />
-              </bpmndi:BPMNEdge>
-            </bpmndi:BPMNPlane>
-          </bpmndi:BPMNDiagram>
-        </bpmn:definitions>
-        `);
-        element.setAttribute('show-process', 'Activity_0d5g08j');
-        element.setAttribute('enable-simulator', 'true');
-        document.getElementById('container').appendChild(element);
-        document.getElementById('zoom-in').addEventListener('click', () => {
-          element.zoomIn();
-        });
-        document.getElementById('zoom-out').addEventListener('click', () => {
-          element.zoomOut();
-        });
-        document.getElementById('reset-zoom').addEventListener('click', () => {
-          element.zoomReset();
-        });
-        element.addEventListener('onelementclick', (event) => {
-          console.log(event.detail)
-        });
-    })
-  </script>
 </body>
 
-</html>   
+</html>
