--- a/src/bpmn-viewer/index.html
+++ b/src/bpmn-viewer/index.html
@@ -25,7 +25,7 @@
           <button id="zoom-in">➕</button>
         </div>
         <div class="container" id="container">
-          <bpmn-viewer src="./test-data/custom-linksq.bpmn"></bpmn-viewer>
+          <bpmn-viewer src="./test-data/custom-links.bpmn"></bpmn-viewer>
         </div>
         </div>
       </div>
